fix (box-text el-padding-right) for Firefox

--- a/styles/style.css
+++ b/styles/style.css
@@ -326,7 +326,7 @@ pre {
     vertical-align: middle;
 }
 
-.row-title {
+.column-title {
     position: relative;
     display: inline-block;
     font-size: 1.8rem;
